--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^5.1.3",
     "js-datepicker": "^5.18.0",
     "normalize.css": "^8.0.1",
+    "quill": "^1.3.7",
     "swiper": "^7.3.1"
   }
 }
