--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "js-datepicker": "^5.18.0",
     "normalize.css": "^8.0.1",
     "quill": "^1.3.7",
