--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.0",
+    "@babel/runtime": "^7.16.7",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.26.7",
@@ -32,6 +34,8 @@
     "yargs": "^15.3.1"
   },
   "dependencies": {
+    "@lottiefiles/lottie-interactivity": "^1.3.2",
+    "@lottiefiles/lottie-player": "^1.5.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "js-datepicker": "^5.18.0",
