--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "js-datepicker": "^5.18.0",
+    "lottie-web": "^5.8.1",
     "normalize.css": "^8.0.1",
     "quill": "^1.3.7",
     "swiper": "^7.3.1"
