--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-rev": "^9.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "sass": "^1.49.4",
     "vinyl-named": "^1.1.0",
     "webpack": "^5.63.0",
     "webpack-stream": "^7.0.0",
